--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,6 @@
 // Mixins Here
+.button-mixin(@bgcolor, @color, @width) {
+    background-color: @bgcolor;
+    color: @color;
+    width: @width;
+}
