--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,11 @@
 // Navigation code here
+nav {
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 1.6rem;
+    padding: 10px 27% 10px 27%;
+    a {
+      text-decoration: none;
+      color: #5E6164;
+    }
+  }
