--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,12 @@
+.display-evenly-mixin {
+  display: flex;
+  justify-content: space-evenly;
+}
+.h1-mixin {
+  padding-top: 5px;
+  padding-bottom: 8px;
+  text-align: center;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -173,6 +182,16 @@ nav a {
   text-decoration: none;
   color: #5E6164;
 }
+@media (max-width: 500px) {
+  nav a {
+    padding: 10px;
+  }
+}
+@media (max-width: 500px) {
+  nav {
+    padding: 0;
+  }
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -187,6 +206,12 @@ h1 {
   padding-top: 5px;
   padding-bottom: 8px;
   text-align: center;
+}
+@media (max-width: 500px) {
+  .sky,
+  .launch {
+    display: none;
+  }
 }
 .home .intro h2 {
   padding: 15px;
@@ -205,6 +230,11 @@ h1 {
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 95%;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
@@ -221,8 +251,21 @@ h1 {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    padding: 10px;
+    flex-direction: column-reverse;
+    margin-top: 0px;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    padding: 15px;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -239,14 +282,23 @@ h1 {
   text-align: center;
   font-size: 1.8rem;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 90%;
+  }
+}
 .home .walk .walk-text .btn:hover {
   background-color: white;
   color: black;
-  width: 100px;
 }
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 95%;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
