--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,12 +1,14 @@
 // Home Content
 
 h1 {
-  padding-top: 5px;
-  padding-bottom: 8px;
-  text-align: center;
+  .h1-mixin();
 }
 
-
+.sky, .launch {
+  @media @phone {
+    display: none;
+  }
+}
 
 .home {
 
@@ -32,6 +34,9 @@ h1 {
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone {
+        width: 95%;
+      }
     }
   }
 
@@ -53,9 +58,18 @@ h1 {
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+    @media @phone {
+      padding: 10px;
+      flex-direction: column-reverse;
+      margin-top: 0px;
+    }
 
     .walk-text {
       width: 50%;
+      @media @phone {
+        width: 100%;
+        padding: 15px;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -66,13 +80,17 @@ h1 {
       }
 
       .btn {
-        .button-mixin(black, white, 100px);
+        .button-mixin(black, white);
+        width: 100px;
         padding: 10px;
         border-radius: 0.5rem;
         text-align: center;
         font-size: 1.8rem;
+        @media @phone {
+          width: 90%;
+        }
         &:hover {
-          .button-mixin(white, black, 100px);
+          .button-mixin(white, black);
         }
       }
     }
@@ -80,6 +98,9 @@ h1 {
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width: 95%;
+      }
       
       img {
         width: 100%;
