--- a/less/home-page.less
+++ b/less/home-page.less
@@ -10,6 +10,11 @@ h1 {
   }
 }
 
+.h1-nav {
+  width: 100%;
+  background: #f4f4f4;
+}
+
 .home {
 
   .intro {
@@ -87,7 +92,9 @@ h1 {
         text-align: center;
         font-size: 1.8rem;
         @media @phone {
-          width: 90%;
+          width: 95%;
+          margin: auto;
+          padding: 15px;
         }
         &:hover {
           .button-mixin(white, black);
