--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,7 +2,9 @@
 nav {
     .display-evenly-mixin();
     font-size: 1.6rem;
-    padding: 10px 27% 10px 27%;
+    width: 65%;
+    margin: auto;
+    padding: 10px;
     a {
       text-decoration: none;
       color: #5E6164;
@@ -12,5 +14,6 @@ nav {
     }
     @media @phone {
         padding: 0;
+        width: 95%;
     }
   }
